--- a/resources/theme/element.css
+++ b/resources/theme/element.css
@@ -521,10 +521,11 @@ uqlibrary-persistent-footer .footerInfo {
     .single-line-list .list-item .content {
       padding-top: 16px;
       padding-bottom: 20px;
-      margin-right: 16px;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis; }
+      margin-right: 16px; }
+      .single-line-list .list-item .content div {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis; }
     .single-line-list .list-item.header {
       font-family: "Roboto";
       font-weight: 700;
